Added JOGL for OpenGL rendering, Added GLRenderer (and swing panel) to render text renderer through opengl (this will eventually be used for spout), added legacy renderer checkbox on startup gui, added count up option, added render background option, added rainbow mode, and added frag/vert shaders.

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ application {
 
 repositories {
     mavenCentral()
+    maven { url "https://jogamp.org/deployment/maven" }
     maven { url = "https://maven.quiltmc.org/repository/release/" }
     maven { url 'https://jitpack.io' }
 }
@@ -22,6 +23,8 @@ dependencies {
     implementation("org.quiltmc:quilt-config:${project.quilt_config_version}")
     implementation("org.quiltmc.quilt-config.serializers:toml:${project.quilt_config_version}")
     implementation("com.formdev:flatlaf:${project.flatlaf_version}")
+    implementation 'org.jogamp.gluegen:gluegen-rt-main:2.6.0'
+    implementation 'org.jogamp.jogl:jogl-all-main:2.6.0'
 }
 
 java {
