transparency, web socket/browser source, added licence

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,7 @@ main = dev.dannytaylor.streamtimer.StreamTimerMain
 
 quilt_config_version = 1.2.0
 flatlaf_version = 3.4.1
+jogl_version = 2.6.0
+twitch4j_version = 1.25.0
+gson_version = 2.13.2
+websocket_version = 1.5.4
