--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,11 @@ dependencies {
     implementation("org.quiltmc:quilt-config:${project.quilt_config_version}")
     implementation("org.quiltmc.quilt-config.serializers:toml:${project.quilt_config_version}")
     implementation("com.formdev:flatlaf:${project.flatlaf_version}")
-    implementation("org.jogamp.gluegen:gluegen-rt-main:2.6.0")
-    implementation("org.jogamp.jogl:jogl-all-main:2.6.0")
-    implementation("com.github.twitch4j:twitch4j:1.25.0")
-    implementation("com.google.code.gson:gson:2.13.2")
+    implementation("org.jogamp.gluegen:gluegen-rt-main:${project.jogl_version}")
+    implementation("org.jogamp.jogl:jogl-all-main:${project.jogl_version}")
+    implementation("com.github.twitch4j:twitch4j:${project.twitch4j_version}")
+    implementation("com.google.code.gson:gson:${project.gson_version}")
+    implementation("org.java-websocket:Java-WebSocket:${project.websocket_version}")
 }
 
 java {
