increased max font size from 200 to 256, added window themes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = dev.dannytaylor
 namespace=streamtimer
 appName = StreamTimer
-version = 1.7.1
+version = 1.7.2
 main = dev.dannytaylor.streamtimer.StreamTimerMain
 
 quilt_config_version = 1.2.0
@@ -11,3 +11,4 @@ twitch4j_version = 1.25.0
 gson_version = 2.13.2
 websocket_version = 1.5.4
 logger_version = 1.2.2
+jSystemThemeDetector_version = 3.6
