--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation("com.google.code.gson:gson:${project.gson_version}")
     implementation("org.java-websocket:Java-WebSocket:${project.websocket_version}")
     implementation("com.github.legotaylor:logger:${project.logger_version}")
+    implementation("com.github.Dansoftowner:jSystemThemeDetector:${project.jSystemThemeDetector_version}")
 }
 
 java {
